[#467] Support ProtoField on record components